# NU-ROS2-Learning

./: README.md
projects/rtc_face_recognition_ulanpy/: .gitignore  README.md  main.py  pyproject.toml
projects/rtc_face_recognition_ulanpy/ipynb_training/: FaceNet_finetune.ipynb  Facenet_and_missforest_paper.ipynb
projects/rtc_face_recognition_ulanpy/src/: __init__.py  face_recognizer.py
