[tool.poetry]
name = "facerecogapp"
version = "0.1.0"
description = ""
authors = ["Ulan <ulan.sharipov@nu.edu.kz>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
opencv-python = "^4.10.0.84"
pygame = "^2.6.0"
scikit-learn = "^1.5.1"
tensorflow-io-gcs-filesystem = "0.31.0"
keras-facenet = "^0.3.2"
lightgbm = "^4.5.0"
tqdm = "^4.67.0"
tensorflow = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
